--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
+    padding: 0;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -16,17 +21,31 @@ body {
 
 #calculator {
     margin-top: 50px;
-    height: 500px;
-    width: 500px; 
+    height: 450px;
+    width: 400px; 
     border: black 2px solid;
+    display: grid;
 }
 
 #calculator-display {
-    height: 70px;
-    text-align: right;
-    line-height: 70px;
-    padding: 16px 8px;
-    font-size: 25px;
+    height: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
+    word-wrap: break-word;
+    word-break: break-all;
+    padding: 1rem;
+}
+
+#calculator-display .previous-operand {
+    font-size: 15px;
+    color: grey;
+}
+
+#calculator-display .current-operand {
+    color: black;
+    font-size: 20px;
 }
 
 #calculator-buttons {
@@ -34,12 +53,13 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.button {
+button {
     border: 0.5px solid black;
-    line-height: 79px;
+    line-height: 69px;
     text-align: center;
     font-size: 20px;
     cursor: pointer;
+    margin: 0;
 }
 
 #clear {
@@ -47,6 +67,7 @@ body {
     color: white;
     opacity: 0.6;
     transition: 0.3s;
+    grid-column: span 3;
 }
 
 #clear:hover {opacity: 1;}
@@ -60,3 +81,6 @@ body {
 
 #arithmetic:hover {opacity: 1;}
 
+.span {
+    grid-column: span 3;
+}
