Created 3 functions vital to this project. One was chooseOperation() which is to ensure the calculator knows which operand to use when calculating and also to allow the user to see the previous operand so they can see what they typed. The compute function which is somewhat the same as operate() function except it doesn't take 2 parameters. Compute() function works better this way and doesn't require as many methods as the other. Finally, the displayUpdate() function were it displays event occurences like the buttons presssed as well as the operation.

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,15 @@ button {
     margin: 0;
 }
 
+#number {
+    background-color: whitesmoke;
+}
+
+#number:hover {
+    background-color: rgb(184, 183, 183);
+    transition: 0.3s; 
+}
+
 #clear {
     background-color: darkorange;
     color: white;
@@ -72,14 +81,15 @@ button {
 
 #clear:hover {opacity: 1;}
 
-#arithmetic {
+#arithmetic, [data-operate] {
     background-color: skyblue;
     opacity: 0.6;
     color: black;
     transition: 0.3s;
 }
 
-#arithmetic:hover {opacity: 1;}
+#arithmetic:hover, [data-operate]:hover {opacity: 1;}
+
 
 .span {
     grid-column: span 3;
